--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.14",
+    "apexcharts": "^4.5.0",
+    "axios": "^1.8.3",
     "nuxt": "^3.16.0",
+    "tailwindcss": "^4.0.14",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-apexcharts": "^1.8.0"
   }
 }
