--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue3-apexcharts": "^1.8.0"
+  },
+  "devDependencies": {
+    "@types/vue": "^2.0.0",
+    "@vitejs/plugin-vue": "^5.2.3",
+    "typescript": "^5.8.2"
   }
 }
